--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -15,7 +15,7 @@
         <div class="flex flex-1 flex-col justify-center px-4 py-12 sm:px-6 lg:flex-none lg:px-20 xl:px-24">
             <div class="mx-auto w-full max-w-sm lg:w-96">
                 <div>
-                    <img class="h-10 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&amp;shade=600"
+                    <img class="h-10 w-auto" src="https://api.iconify.design/logos:arc.svg"
                          alt="Your Company">
                     <h2 class="mt-8 text-2xl font-bold leading-9 tracking-tight text-gray-900">Sign in to your
                         account</h2>
