--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,8 +30,10 @@
                 <!-- Sidebar component -->
                 <div class="flex grow flex-col gap-y-5 overflow-y-auto bg-white px-6 pb-4">
                     <div class="flex h-16 shrink-0 items-center">
-                        <img class="h-8 w-auto" src="https://api.iconify.design/logos:arc.svg"
-                             alt="Your Company">
+                        <a href="/pos">
+                            <img class="h-8 w-auto" src="https://api.iconify.design/logos:arc.svg"
+                                 alt="Your Company">
+                        </a>
                     </div>
                     <nav class="flex flex-1 flex-col">
                         <ul role="list" class="flex flex-1 flex-col gap-y-7">
@@ -64,8 +66,10 @@
     <div class="hidden lg:fixed lg:inset-y-0 lg:z-50 lg:flex lg:w-72 lg:flex-col">
         <div class="flex grow flex-col gap-y-5 overflow-y-auto border-r border-gray-200 bg-white px-6 pb-4">
             <div class="flex h-16 shrink-0 items-center">
-                <img class="h-8 w-auto" src="https://api.iconify.design/logos:arc.svg"
-                     alt="Your Company">
+                <a href="/pos">
+                    <img class="h-8 w-auto" src="https://api.iconify.design/logos:arc.svg"
+                         alt="Your Company">
+                </a>
             </div>
             <nav class="flex flex-1 flex-col">
                 <ul role="list" class="flex flex-1 flex-col gap-y-7">
@@ -246,9 +250,9 @@
                     qty: 0,
                     image: null
                 },
-                errors: {} // Object to store validation errors
+                errors: {},
+                categoryToDelete: null,
             };
-
         },
         mounted() {
             if (localStorage.getItem('login') === 'login') {
@@ -335,6 +339,14 @@
                 this.isDeleteModalOpen = false;
                 this.userToDelete = null;
             },
+            openDeleteCategoryModal(category) {
+                this.categoryToDelete = category;
+                this.isDeleteModalOpen = true;
+            },
+            closeDeleteCategoryModal() {
+                this.isDeleteModalOpen = false;
+                this.categoryToDelete = null;
+            },
             confirmDelete() {
                 if (this.userToDelete) {
                     axios.delete(`/api/users/${this.userToDelete.id}`)
@@ -374,6 +386,9 @@
             handleOutsideClick(event) {
                 if (event.target.id === 'crud-modal') {
                     this.closeModal();
+                }
+                if (event.target.id === 'delete-modal') {
+                    this.closeDeleteCategoryModal();
                 }
                 if (event.target.id === 'sidebar') {
                     this.sidebarOpen = false;
@@ -569,6 +584,20 @@
                         console.error('Error deleting category:', error);
                     });
             },
+            confirmDeleteCategory() {
+                if (this.categoryToDelete) {
+                    axios.delete(`/api/categories/${this.categoryToDelete.id}`)
+                        .then(response => {
+                            this.categories = this.categories.filter(cat => cat.id !== this.categoryToDelete.id);
+                            alert('Category deleted successfully!');
+                            this.closeDeleteCategoryModal();
+                        })
+                        .catch(error => {
+                            console.error('Error deleting category:', error);
+                        });
+                }
+            },
+
             resetCurrentCategory() {
                 this.currentCategory = {
                     id: null,
