--- a/app/templates/category/index.html
+++ b/app/templates/category/index.html
@@ -50,7 +50,7 @@
                                             <button @click="openCategoryModal('edit', category)"
                                                     class="text-indigo-600 hover:text-indigo-900">Edit
                                             </button>
-                                            <button @click="deleteCategory(category)"
+                                            <button @click="openDeleteCategoryModal(category)"
                                                     class="text-red-600 hover:text-red-900">Delete
                                             </button>
                                         </td>
@@ -66,17 +66,17 @@
             <div v-if="isModalOpen" id="crud-modal" tabindex="-1" aria-hidden="true"
                  class="fixed top-0 left-0 right-0 z-50 flex justify-center items-center w-full h-full bg-gray-900 bg-opacity-50"
                  @click="handleOutsideClick">
-                <div class="relative p-4 w-full max-w-3xl" @click.stop>
+                <div class="relative p-6 w-full max-w-3xl" @click.stop>
                     <!-- Modal content -->
-                    <div class="relative bg-white rounded-lg shadow dark:bg-gray-700 max-h-[90vh] overflow-y-auto">
+                    <div class="relative bg-white rounded-lg shadow-lg dark:bg-gray-800 max-h-[90vh] overflow-y-auto">
                         <!-- Modal header -->
-                        <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600">
-                            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+                        <div class="flex items-center justify-between p-5 border-b border-gray-200 dark:border-gray-700 rounded-t">
+                            <h3 class="text-xl font-semibold text-gray-800 dark:text-white">
                                 [[ formMode === 'create' ? 'Create New Category' : 'Edit Category' ]]
                             </h3>
                             <button @click="closeModal" type="button"
-                                    class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white">
-                                <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                                    class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-full text-sm w-8 h-8 inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white">
+                                <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
                                      viewBox="0 0 14 14">
                                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                                           stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
@@ -85,34 +85,78 @@
                             </button>
                         </div>
                         <!-- Modal body -->
-                        <form @submit.prevent="saveCategory" class="flex justify-center gap-5 w-full  p-4 md:p-5">
-                            <div class="grid gap-6 mb-6 md:grid-cols-2">
+                        <form @submit.prevent="saveCategory" class="p-6 space-y-6">
+                            <div class="grid grid-cols-1 gap-6 md:grid-cols-2">
                                 <div class="col-span-2">
                                     <label for="category_name"
-                                           class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Category
+                                           class="block mb-2 text-sm font-medium text-gray-700 dark:text-white">Category
                                         Name</label>
                                     <input v-model="currentCategory.category_name"
-                                           class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                                           class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-indigo-500 focus:border-indigo-500 block w-full p-3 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-indigo-500 dark:focus:border-indigo-500"
                                            placeholder="Category Name" type="text" id="category_name">
                                 </div>
                                 <div class="col-span-2">
                                     <label for="description"
-                                           class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Description</label>
+                                           class="block mb-2 text-sm font-medium text-gray-700 dark:text-white">Description</label>
                                     <textarea v-model="currentCategory.description"
-                                              class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                                              class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-indigo-500 focus:border-indigo-500 block w-full p-3 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-indigo-500 dark:focus:border-indigo-500"
                                               placeholder="Description" id="description"></textarea>
                                 </div>
-                                <div class="col-span-2">
-                                    <button type="submit"
-                                            class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-                                        [[ formMode === 'create' ? 'Create Category' : 'Update Category' ]]
-                                    </button>
-                                </div>
+                            </div>
+                            <div class="flex justify-end">
+                                <button type="submit"
+                                        class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-lg shadow-sm text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                                    [[ formMode === 'create' ? 'Create Category' : 'Update Category' ]]
+                                </button>
                             </div>
                         </form>
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
+    <!-- Delete Modal for Category -->
+    <div v-if="isDeleteModalOpen" id="delete-modal" tabindex="-1" aria-hidden="true"
+         class="fixed top-0 left-0 right-0 z-50 flex justify-center items-center w-full h-full bg-gray-900 bg-opacity-50"
+         @click="handleOutsideClick">
+        <div class="relative p-4 w-full max-w-md" @click.stop>
+            <!-- Modal content -->
+            <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+                <!-- Modal header -->
+                <div class="flex items-center justify-between p-4 border-b rounded-t dark:border-gray-600">
+                    <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+                        Confirm Delete
+                    </h3>
+                    <button @click="closeDeleteModal" type="button"
+                            class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white">
+                        <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                             viewBox="0 0 14 14">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                  stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+                        </svg>
+                        <span class="sr-only">Close modal</span>
+                    </button>
+                </div>
+                <!-- Modal body -->
+                <div class="p-4">
+                    <p class="text-sm text-gray-500 dark:text-gray-300">
+                        Are you sure you want to delete this category?
+                    </p>
+                </div>
+                <!-- Modal footer -->
+                <div class="flex items-center justify-end p-4 border-t border-gray-200 rounded-b dark:border-gray-600">
+                    <button @click="closeDeleteModal" type="button"
+                            class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-gray-200 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600">
+                        Cancel
+                    </button>
+                    <button @click="confirmDeleteCategory" type="button"
+                            class="ml-2 text-white bg-red-600 hover:bg-red-700 focus:ring-4 focus:outline-none focus:ring-red-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-red-500 dark:hover:bg-red-600 dark:focus:ring-red-900">
+                        Delete
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
